data/derived/fa15/progs/unify/prog1861.ml.out
Characters 280-284:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type int list
       but an expression was expected of type int list list
       Type int is not compatible with type int list 
